--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "safe-dao-governance",
-  "homepage": "https://github.com/safe-global/safe-dao-governance",
+  "name": "safe-dao-governance-app",
+  "homepage": "https://github.com/safe-global/safe-dao-governance-app",
   "license": "GPL-3.0",
   "version": "0.1.0",
   "scripts": {
