--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "safe-dao-governance",
+  "short_name": "safe-dao-governance-app",
   "name": "Safe {DAO} Governance",
   "description": "The portal to Safe {DAO} governance, voting power delegation and allocation claiming.",
   "icons": [
