--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.6",
     "@tanstack/react-query": "^4.22.0",
     "@web3-onboard/coinbase": "^2.2.0",
-    "@web3-onboard/core": "2.12.1",
+    "@web3-onboard/core": "^2.13.1",
     "@web3-onboard/injected-wallets": "^2.5.0",
     "@web3-onboard/keystone": "^2.3.2",
     "@web3-onboard/ledger": "^2.4.0",
