--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "prettier", "plugin:prettier/recommended"],
+  "extends": ["next/core-web-vitals", "prettier"],
+  "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
     "@next/next/no-img-element": "off",
     "no-constant-condition": "warn"
   },
-  "ignorePatterns": ["node_modules/", ".next/", ".github/", "src/types/contracts"],
-  "plugins": ["@typescript-eslint"]
+  "ignorePatterns": ["node_modules/", ".next/", ".github/", "src/types/contracts"]
 }
