--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@mui/material": "^5.11.5",
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.6",
     "@tanstack/react-query": "^4.22.0",
-    "@web3-onboard/coinbase": "^2.2.0",
-    "@web3-onboard/core": "^2.13.1",
-    "@web3-onboard/injected-wallets": "^2.5.0",
+    "@web3-onboard/coinbase": "^2.1.3",
+    "@web3-onboard/core": "2.8.5",
+    "@web3-onboard/injected-wallets": "^2.3.0",
     "@web3-onboard/keystone": "^2.3.2",
-    "@web3-onboard/ledger": "^2.4.0",
+    "@web3-onboard/ledger": "^2.3.2",
     "@web3-onboard/tallyho": "^2.0.1",
     "@web3-onboard/trezor": "^2.3.2",
-    "@web3-onboard/walletconnect": "^2.2.2",
+    "@web3-onboard/walletconnect": "^2.1.3",
     "bezier-easing": "^2.1.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
