--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@web3-onboard/core": "2.8.5",
     "@web3-onboard/injected-wallets": "^2.3.0",
     "@web3-onboard/keystone": "^2.3.2",
-    "@web3-onboard/ledger": "^2.3.2",
+    "@web3-onboard/ledger": "2.3.2",
     "@web3-onboard/tallyho": "^2.0.1",
     "@web3-onboard/trezor": "^2.3.2",
     "@web3-onboard/walletconnect": "^2.1.3",
