--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "ethers": "^5.7.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
