--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,12 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      # `hardhat compile` has issues with the latest version of Node
+      # https://github.com/NomicFoundation/hardhat/issues/3877
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.15.0
+
       - uses: ./.github/workflows/yarn
 
       - uses: Maggi64/eslint-plus-action@master
