test: revert hardhat

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint:fix": "next lint --fix",
     "generate-types:safe-token": "typechain --target ethers-v5 --out-dir ./src/types/contracts/safe-token './artifacts/safe-token/contracts/**/*[!.dbg].json'",
     "generate-types:delegate-registry": "typechain --target ethers-v5 --out-dir ./src/types/contracts/delegate-registry './artifacts/delegate-registry/contracts/**/*[!.dbg].json'",
-    "generate-types": "hardhat compile --force && yarn generate-types:safe-token && yarn generate-types:delegate-registry",
+    "generate-types": "yarn generate-types:safe-token && yarn generate-types:delegate-registry",
     "prettier": "prettier -w \"{src,pages,scripts}/**/*.{ts,tsx,css,js}\"",
-    "postinstall": "yarn run generate-types",
+    "postinstall": "hardhat compile && yarn run generate-types",
     "routes": "node scripts/generate-routes.js > src/config/routes.ts && prettier -w src/config/routes.ts",
     "start": "next dev",
     "test": "jest",
@@ -62,7 +62,7 @@
     "eslint-config-next": "13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "hardhat": "^2.16.0",
+    "hardhat": "^2.12.6",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.8.3",
