test: add `age` to workflow

--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -9,3 +9,5 @@ jobs:
     steps:
       - name: Remove old artifacts
         uses: c-hive/gha-remove-artifacts@v1
+        with:
+          age: '90 seconds'
