--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate-types:delegate-registry": "typechain --target ethers-v5 --out-dir ./src/types/contracts/delegate-registry './artifacts/delegate-registry/contracts/**/*[!.dbg].json'",
     "generate-types": "yarn generate-types:safe-token && yarn generate-types:delegate-registry",
     "prettier": "prettier -w \"{src,pages,scripts}/**/*.{ts,tsx,css,js}\"",
-    "postinstall": "yarn patch-package && hardhat compile && yarn run generate-types",
+    "postinstall": "hardhat compile && yarn run generate-types",
     "routes": "node scripts/generate-routes.js > src/config/routes.ts && prettier -w src/config/routes.ts",
     "start": "next dev",
     "test": "jest",
@@ -30,13 +30,13 @@
     "@mui/material": "^5.11.5",
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.6",
     "@web3-onboard/coinbase": "^2.2.4",
-    "@web3-onboard/core": "2.20.3",
+    "@web3-onboard/core": "2.20.4",
     "@web3-onboard/injected-wallets": "^2.10.0",
     "@web3-onboard/keystone": "^2.3.7",
-    "@web3-onboard/ledger": "^2.4.6",
-    "@web3-onboard/taho": "^2.0.4",
+    "@web3-onboard/ledger": "^2.5.0",
+    "@web3-onboard/taho": "^2.0.5",
     "@web3-onboard/trezor": "^2.4.2",
-    "@web3-onboard/walletconnect": "2.3.9",
+    "@web3-onboard/walletconnect": "2.4.0",
     "bezier-easing": "^2.1.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
@@ -65,7 +65,6 @@
     "hardhat": "^2.12.6",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "patch-package": "^7.0.0",
     "prettier": "^2.8.3",
     "safe-token": "safe-global/safe-token",
     "typechain": "^8.1.1",
