--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.1.0"
+    "swr": "^2.1.0",
+    "victory": "^36.9.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
