chore: update safe-apps-sdk

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
-    "@gnosis.pm/safe-apps-provider": "^0.15.1",
-    "@gnosis.pm/safe-apps-react-sdk": "^4.6.2",
+    "@safe-global/safe-apps-provider": "^0.18.2",
+    "@safe-global/safe-apps-react-sdk": "^4.7.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.6",
