--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
-    "@safe-global/safe-apps-provider": "^0.18.2",
-    "@safe-global/safe-apps-react-sdk": "^4.7.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
+    "@mui/x-date-pickers": "^7.1.1",
+    "@safe-global/safe-apps-provider": "^0.18.2",
+    "@safe-global/safe-apps-react-sdk": "^4.7.1",
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.6",
     "@web3-onboard/coinbase": "^2.2.4",
     "@web3-onboard/core": "2.20.4",
@@ -40,6 +41,7 @@
     "bezier-easing": "^2.1.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.10",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.7.2",
     "next": "13.1.2",
