--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "safe-dao-governance-app",
-  "name": "Safe{DAO} Governance",
-  "description": "The portal to Safe{DAO} governance, voting power delegation and allocation claiming.",
+  "short_name": "safe-pass-governance",
+  "name": "Safe{Pass}|{DAO}",
+  "description": "The portal to the Safe community. Get your Safe{Pass}, get rewarded, and participate in governance.",
   "icons": [
     {
       "src": "/images/app-logo.svg",
