--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-config-next": "13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "hardhat": "^2.12.6",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
