--- a/package.json
+++ b/package.json
@@ -30,20 +30,15 @@
     "@safe-global/safe-apps-provider": "^0.18.2",
     "@safe-global/safe-apps-react-sdk": "^4.7.1",
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.6",
-    "@web3-onboard/coinbase": "^2.2.4",
-    "@web3-onboard/core": "2.20.4",
-    "@web3-onboard/injected-wallets": "^2.10.0",
-    "@web3-onboard/keystone": "^2.3.7",
-    "@web3-onboard/ledger": "2.3.2",
-    "@web3-onboard/taho": "^2.0.5",
-    "@web3-onboard/trezor": "^2.4.2",
-    "@web3-onboard/walletconnect": "2.4.0",
+    "@web3-onboard/core": "2.21.4",
+    "@web3-onboard/walletconnect": "2.5.4",
     "bezier-easing": "^2.1.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.10",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -56,6 +51,7 @@
     "@testing-library/react": "^13.4.0",
     "@typechain/ethers-v5": "^10.2.0",
     "@types/jest": "^29.2.6",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
