--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@safe-global/safe-apps-react-sdk": "^4.7.1",
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.6",
     "@web3-onboard/core": "2.21.4",
+    "@web3-onboard/injected-wallets": "^2.10.16",
     "@web3-onboard/walletconnect": "2.5.4",
     "bezier-easing": "^2.1.0",
     "clsx": "^1.2.1",
